--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
-    <title>Mini Profile - Free Bootstrap CSS Template</title>
+    <title>Tony profile</title>
     
 <!--
 Mini Profile Template
@@ -40,20 +40,22 @@ https://templatemo.com/tm-530-mini-profile
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome to Mini Profile Page</h2>
+                <h2 class="tm-welcome-title">Profile</h2>
                 <p class="pb-0">
-                  This is Bootstrap v4.3.1 parallax layout for you. Credit goes to <a rel="nofollow" href="https://www.pexels.com">Pexels</a> for 2 background images. In
-                  odio sapien, commodo id ullamcorper ac, dignissim at sapien.
-                  Nullam leo massa, vaius ac massa et, tincidunt imperdiet
-                turpis. </p>
+                  I am an allrounder who always looking for ways to utilize and expand my skillset. 
+                  My parents noticed my interest in inspecting faulty clocks and using of screwdrivers etc 
+                  in my childhood (those were my toys) and batteries: though it is hazardous😊,resulted 
+                  in sending me to a <a href="https://enacademic.com/dic.nsf/enwiki/10018946">technical school </a>
+                  at my early 13’s, from which I have learned the basics of Electrical engineering,
+                   Electronics engineering and Computer engineering.  </p>
               </div>
             </div>
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
+                <img src="img/profile_img.jpg">
                 <p class="mb-0">
-                  Please spread a word about templatemo website. Anyone can download free Bootstrap CSS templates.
+                  Currently working as a parttime Electric-scooter repairing technician. 
                 </p>
               </div>
             </div>
@@ -70,12 +72,12 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                Project Manager
+              Electric scooter technician
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
-                  New Company
-                  <span class="tm-title-small">(2019 January to Present)</span>
+                  South side electric scooter repair 
+                  <span class="tm-title-small">(2020 June to Present)</span>
                 </h3>
                 <p class="mb-0">
                   Nullam a tellus ultricies, ornare purus vel, porttitor massa.
@@ -87,12 +89,12 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Senior UX Designer
+              R&D Engineer
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Studio One
-                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                  Ark Electronics Motion controls
+                  <span class="tm-title-small">(2019 February to 2018 May)</span>
                 </h3>
                 <p class="mb-0">
                   Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
@@ -106,7 +108,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Graphic Designer
+              Entrepreneur 
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
@@ -123,7 +125,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Design School
+              Embedded Engineer
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
@@ -228,9 +230,8 @@ https://templatemo.com/tm-530-mini-profile
         <div class="row">
           <footer class="col-12">
             <p class="text-center tm-copyright-text">
-            Copyright 2020 Mini Profile Page 
-            
-            - Design: Template Mo</p>
+            Copyright - 2021 Tony Sebastian 
+          </p>
           </footer>
         </div>
       </div>
