--- a/index.html
+++ b/index.html
@@ -80,9 +80,20 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(2020 June to Present)</span>
                 </h3>
                 <p class="mb-0">
-                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
-                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
-                  facilisis. Duis malesuada, mi non elementum malesuada.
+                  After arriving Ireland for studies, I have worked in different roles like, 
+                  shop assistant, pizza chief. In between I have tried jobs in
+                  technical field and that brings me to Mr. Anthony O driscoll 
+                  who runs a small business of sales and service of electric bikes and scooters.
+                  And now, I am working with him as an Electronics technician. 
+                  We service <a href= "https://www.google.com/search?q=electric+scooter+hub+motor+repairing&tbm=isch&ved=2ahUKEwiogMmmifvtAhUMiVwKHYLhBcIQ2-cCegQIABAA&oq=electric+scooter+hub+motor+repairing&gs_lcp=CgNpbWcQAzoCCAA6BAgAEB46BggAEAgQHjoECAAQGFDQG1iyRmCHSmgAcAB4AIABrwOIAaoIkgEHOC4xLjQtMZgBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=yULvX-j3CoyS8gKCw5eQDA&bih=625&biw=1366">
+                  BLDC motors</a>, <a href= "https://www.google.com/search?q=lithium+ion+battery+pack&tbm=isch&ved=2ahUKEwjSvYCsifvtAhUnSEEAHfjYAhUQ2-cCegQIABAA&oq=lith&gs_lcp=CgNpbWcQARgCMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgIIADICCAAyBAgAEEMyAggAOgQIIxAnOggIABCxAxCDAToFCAAQsQNQicsOWJzaDmDW-A5oAHAAeACAAWSIAbQCkgEDMy4xmAEAoAEBqgELZ3dzLXdpei1pbWfAAQE&sclient=img&ei=1ELvX9KDI6eQhbIP-LGLqAE&bih=625&biw=1366#imgrc=1PxymHESY_u1jM">
+                  Lithium-ion battery packs </a>,<a href="https://www.google.com/search?q=electric+scooter+comtroller+board&tbm=isch&ved=2ahUKEwiZw6ShivvtAhUFXcAKHS4hBXsQ2-cCegQIABAA&oq=electric+scooter+comtroller+board&gs_lcp=CgNpbWcQAzoECCMQJzoECAAQQzoCCAA6CAgAELEDEIMBOgUIABCxAzoKCAAQsQMQgwEQQzoHCAAQsQMQQ1D5-ApY7rsLYLDEC2gAcAB4AoABkwaIAbwakgEMMjguMy40LTEuMC4xmAEAoAEBqgELZ3dzLXdpei1pbWfAAQE&sclient=img&ei=ykPvX5m2IIW6gQauwpTYBw&bih=625&biw=1366">
+                  Controller boards</a>,
+                  sensors and all other electronic parts. I also got opportunity to collaborate with 
+                  one of the leading bike shops in Dublin on a contract basis. 
+                  Until now I was able to fix about 200 bikes and scooters, which helped people’s 
+                  commutation with<a href="https://www.electricbikecity.com/blogs/learn/environmental-benefits-of-riding-an-electric-bicycle#:~:text=Electric%20bicycles%20are%20also%20good,is%20considered%20a%20mild%20exercise.">
+                  less harm to the environment</a>. I am happy to be a part in it.
                 </p>
               </div>
             </div>
@@ -97,11 +108,12 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(2019 February to 2018 May)</span>
                 </h3>
                 <p class="mb-0">
-                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
-                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
-                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
-                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
-                  id malesuada ligula.
+                  <a href="http://www.arkmotion.com/">This is the place </a> where I got an industrial experience in a manufacturing and R&D  environment, 
+                  from which I have learned PCB designing and Embedded hardware development. Though I was the part of 
+                  hardware team, I got opportunity to collaborate with testing team and field service engineers. 
+                  However, I couldn’t continue there for long, as I got the opportunity to move to Ireland for my 
+                  higher studies. During this short period, I was able to be an active part of an agile team and 
+                  develop my skills, thanks to Ark and the team😊.pragmatic approach
                 </p>
               </div>
             </div>
