--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ https://templatemo.com/tm-530-mini-profile
                 </h3>
                 <p class="mb-0">
                   After arriving Ireland for studies, I have worked in different roles like, 
-                  shop assistant, pizza chief. In between I have tried jobs in
+                  shop assistant, pizza maker. In between I have tried jobs in
                   technical field and that brings me to Mr. Anthony O driscoll 
                   who runs a small business of sales and service of electric bikes and scooters.
                   And now, I am working with him as an Electronics technician. 
@@ -113,7 +113,7 @@ https://templatemo.com/tm-530-mini-profile
                   hardware team, I got opportunity to collaborate with testing team and field service engineers. 
                   However, I couldn’t continue there for long, as I got the opportunity to move to Ireland for my 
                   higher studies. During this short period, I was able to be an active part of an agile team and 
-                  develop my skills, thanks to Ark and the team😊.pragmatic approach
+                  develop my skills, thanks to Ark and the team😊.
                 </p>
               </div>
             </div>
@@ -124,13 +124,19 @@ https://templatemo.com/tm-530-mini-profile
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
-                  Digital Com
-                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
+                  Vollband entertainment
+                  <span class="tm-title-small">(2016 Dec to 2018 Dec)</span>
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  My friend and me stared a start-up business named
+                  <a href="http://www.findglocal.com/IN/Thodupuzha/1766263743640212/Vollband-entertainment">Vollband entertainment</a> which focused on 
+                  sales and service of audio video systems. Since our investment was low, we haven’t even 
+                  set up any demo room and we found it difficult to get a kick start. But gradually we got 
+                  clients and those happy clients has given a great deal of references that made our business 
+                  grow. During this period, we completed a government tender successfully which effectively 
+                  boosted our market value and credibility. Although we were able to recruit some employees 
+                  temporarily and bring the business in profit, from our experiences and findings we have 
+                  decided to pause the business and resume it after having enough fund-to do it in a grand way.
                 </p>
               </div>
             </div>
@@ -141,15 +147,18 @@ https://templatemo.com/tm-530-mini-profile
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
-                  Art Design College
+                  SeLevanta Technologies Pvt Ltd
                   <span class="tm-title-small">
-                    (2012 May to 2014 Dec)
+                    (2015 July to 2016 Oct)
                   </span>
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                Immediately after completing my graduation, I joined as an embedded engineer at  <a href="https://economictimes.indiatimes.com/company/selevanta-technologies-private-limited-/U72900KL2013PTC035206">
+                SeLevanta</a>. There I got opportunity to be the part of entire SDLC of embedded products. The company was 
+                providing assistance to graduate students for their academic projects and for their further 
+                career development. From here I got opportunity to work closely with marketing team and the 
+                management team. That boosted my confidence to become an entrepreneur and I left the company 
+                as the technical lead. SeLevanta gave several valuable life lessons for me. 
                 </p>
               </div>
             </div>
@@ -175,8 +184,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You can absolutely feel free to use Mini Profile for your web page or any usage for your website.
-                </p>
+                  pragmatic approach                </p>
               </div>
 
               <div class="tm-contact-item">
