experiences and profile done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-530-mini-profile
                 <h2 class="tm-welcome-title">Profile</h2>
                 <p class="pb-0">
                   I am an allrounder who always looking for ways to utilize and expand my skillset. 
-                  My parents noticed my interest in inspecting faulty clocks and using of screwdrivers etc 
+                  My parents noticed my interest in inspecting faulty clocks, using of screwdrivers etc 
                   in my childhood (those were my toys) and batteries: though it is hazardous😊,resulted 
                   in sending me to a <a href="https://enacademic.com/dic.nsf/enwiki/10018946">technical school </a>
                   at my early 13’s, from which I have learned the basics of Electrical engineering,
@@ -177,27 +177,25 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  Quisque venenatis viverra ultrices. Lorem ipsum dolor sit
-                  amet. Nullam sit amet tempor nisl.
+                Embedded system-Hardware design- Troubleshooting- C,C++
                 </p>
               </div>
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  pragmatic approach                </p>
+                  pragmatic approach- Can do attitude- Entrepreneurship- Team player -Continuous Learning                </p>
               </div>
 
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You are NOT allowed to re-distribute this template in any download website. Else, it is illegal action.
-                </p>
+                Python-SQL-Web development-Data analysis-OOP-Computer Networking                </p>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-12">
             <form
               action="index.html"
@@ -245,7 +243,7 @@ https://templatemo.com/tm-530-mini-profile
               </div>
             </form>
           </div>
-        </div>
+        </div> -->
         <!-- row -->
         <div class="row">
           <footer class="col-12">
